--- a/quarterapp/resources/templates/admin/edit-user.html
+++ b/quarterapp/resources/templates/admin/edit-user.html
@@ -9,7 +9,7 @@ Edit user
     <section class="content">
         <form id="login-form" action="/admin/user/{{ user.id }}" method="POST" data-validation>
             <fieldset>
-                <label for="username">Username</label>
+                <label for="username">E-mail address</label>
                 <input type="text" name="username" id="username" readonly
                     data-validator="required email"
                     data-validator-on="focus-loss" 
