Renamed idle to erase after feedback

--- a/quarterapp/resources/templates/app/timesheet.html
+++ b/quarterapp/resources/templates/app/timesheet.html
@@ -92,7 +92,7 @@ Timesheet
                 </div>
                 <ul>
                     <li class="activity-row" data-activity-id="-1" data-activity-color="#fff" data-activity-title="Idle">
-                        <div class="activity-title">Idle</div>
+                        <div class="activity-title">Erase</div>
                         <div class="activity-palette" style="background-color: #fff;"></div>
                         <span class="icon">&nbsp;</span>
                     </li>
