Fixed social part of footer

--- a/quarterapp/resources/templates/admin/view_base.html
+++ b/quarterapp/resources/templates/admin/view_base.html
@@ -59,7 +59,7 @@
         <footer id="footer-region" class="main">
             <div class="container">
                 <a href="http://github.com/eliasson/quarterapp" class="icon github">&nbsp;</a>
-                <a href="http://github.com/eliasson/quarterapp" class="icon twitter">&nbsp;</a>
+                <a href="http://twitter.com/markuseliasson" class="icon twitter">&nbsp;</a>
                 <p class="note">Code licensed under <a href="http://www.gnu.org/licenses/gpl-3.0.txt">GNU General Public License v3</a>.</p>
                 <p class="note">Copyright &copy; 2013 <a href="mailto:markus.eliasson@gmail.com">Markus Eliasson</a> - All rights reserved.</p>
             </div>
