--- a/quarterapp/resources/static/styles/qa.icons.less
+++ b/quarterapp/resources/static/styles/qa.icons.less
@@ -97,15 +97,15 @@
 
 .icon.github:before {
     font-family: 'entypo-social';
-    content: "\F300";
+    content: "\e001";
 }
 
 .icon.twitter:before {
     font-family: 'entypo-social';
-    content: "\F309";
+    content: "\e000";
 }
 
 .icon.gplus:before {
     font-family: 'entypo-social';
-    content: "\F30F";
+    content: "\e003";
 }
