--- a/quarterapp/resources/static/styles/qa.timesheet.less
+++ b/quarterapp/resources/static/styles/qa.timesheet.less
@@ -313,3 +313,7 @@ span.activity-cell.pending {
        background-position: -50px 0;
     }
 }
+
+span.activity-cell.pending > .icon.comment {
+    opacity: 0.4;
+}
