--- a/quarterapp/resources/templates/view_base.html
+++ b/quarterapp/resources/templates/view_base.html
@@ -72,8 +72,8 @@
 
         <footer id="footer-region" class="main">
             <div class="container">
-                <a href="http://github.com/eliasson/quarterapp" class="icon github">&nbsp;</a>
-                <a href="http://twitter.com/markuseliasson" class="icon twitter">&nbsp;</a>
+                <a href="http://github.com/eliasson/quarterapp" class="icon tiny github">&nbsp;</a>
+                <a href="http://twitter.com/markuseliasson" class="icon tiny twitter">&nbsp;</a>
                 <p class="note">Code licensed under <a href="http://www.gnu.org/licenses/gpl-3.0.txt">GNU General Public License v3</a>.</p>
                 <p class="note">Copyright &copy; 2013 <a href="http://www.markuseliasson.se">Markus Eliasson</a> - All rights reserved.</p>
             </div>
