Added view to error page

--- a/quarterapp/resources/static/styles/qa.base.less
+++ b/quarterapp/resources/static/styles/qa.base.less
@@ -358,3 +358,15 @@ footer.main a:hover {
         max-width: 600px;
     }
 }
+
+/** Error page **********************************************************/
+
+.container.error {
+    .container.main();
+
+    .icon-box {
+        width: 100px;
+        height: 100px;
+        float: left;
+    }
+}
