--- a/quarterapp/resources/static/styles/qa.icons.less
+++ b/quarterapp/resources/static/styles/qa.icons.less
@@ -43,6 +43,10 @@
     font-size: 18px;
 }
 
+.icon.huge {
+    font-size: 172px;
+}
+
 .icon.edit:after {
     content: "\2699";
 }
@@ -108,4 +112,8 @@
 .icon.gplus:before {
     font-family: 'entypo-social';
     content: "\F30F";
+}
+
+.icon.crash:before {
+    content: "\1F4A5";
 }
