--- a/quarterapp/resources/static/styles/qa.icons.less
+++ b/quarterapp/resources/static/styles/qa.icons.less
@@ -1,30 +1,44 @@
-
 @font-face {
-    font-family: 'entypo';
-    src: url('/static/fonts/entypo.eot');
-    src: url('/static/fonts/entypo.eot?#iefix') format('embedded-opentype'),
-         url('/static/fonts/entypo.woff') format('woff'),
-         url('/static/fonts/entypo.ttf') format('truetype'),
-         url('/static/fonts/entypo.svg#entypo') format('svg');
-    font-weight: normal;
-    font-style: normal;
+  font-family: 'fontello';
+  src: url('/static/fonts/fontello.eot?55463775');
+  src: url('/static/fonts/fontello.eot?55463775#iefix') format('embedded-opentype'),
+       url('/static/fonts/fontello.woff?55463775') format('woff'),
+       url('/static/fonts/fontello.ttf?55463775') format('truetype'),
+       url('/static/fonts/fontello.svg?55463775#fontello') format('svg');
+  font-weight: normal;
+  font-style: normal;
 }
 
-@font-face {
-    font-family: 'entypo-social';
-    src: url('/static/fonts/entypo-social.eot');
-    src: url('/static/fonts/entypo-social.eot?#iefix') format('embedded-opentype'),
-         url('/static/fonts/entypo-social.woff') format('woff'),
-         url('/static/fonts/entypo-social.ttf') format('truetype'),
-         url('/static/fonts/entypo-social.svg#entypo-social') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
+
 
 .icon {
-    font-family: "entypo";
-    font-size: 30px;
-    vertical-align: middle;
+    font-family: "fontello";
+    font-style: normal;
+    font-weight: normal;
+    speak: none;
+
+    display: inline-block;
+    text-decoration: inherit;
+    width: 1em;
+    margin-right: .2em;
+    text-align: center;
+    /* opacity: .8; */
+
+    /* For safety - reset parent styles, that can break glyph codes*/
+    font-variant: normal;
+    text-transform: none;
+    /* fix buttons height, for twitter bootstrap */
+    line-height: 1em;
+
+    /* Animation center compensation - margins should be symmetric */
+    /* remove if not needed */
+    margin-left: .2em;
+
+    /* you can be more comfortable with increased icons size */
+    font-size: 120%; 
+
+    /* Uncomment for 3D effect */
+    /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
 
 .icon.big {
@@ -36,7 +50,7 @@
 }
 
 .icon.medium {
-    font-size: 36px;
+    font-size: 18px;
 }
 
 .icon.small {
@@ -44,7 +58,7 @@
 }
 
 .icon.huge {
-    font-size: 172px;
+    font-size: 80px;
 }
 
 .icon.tiny {
@@ -52,15 +66,15 @@
 }
 
 .icon.edit:after {
-    content: "\2699";
+    content: "\e85a";
 }
 
 .icon.next:after {
-    content: "\E766";
+    content: "\e87e";
 }
 
 .icon.previous:before {
-    content: "\E765";
+    content: "\e87d";
 }
 
 .icon.sod:before {
@@ -72,7 +86,7 @@
 }
 
 .icon.category:before {
-    content: "\1F516";
+    content: "\e830";
 }
 
 .icon.disabled:before {
@@ -104,20 +118,19 @@
 }
 
 .icon.github:before {
-    font-family: 'entypo-social';
-    content: "\e001";
+    content: "\e8ea";
 }
 
 .icon.twitter:before {
-    font-family: 'entypo-social';
-    content: "\e000";
+    content: "\e8f0";
 }
 
 .icon.gplus:before {
-    font-family: 'entypo-social';
     content: "\e003";
 }
 
 .icon.crash:before {
-    content: "\1F4A5";
+    content: '\e83d';
 }
+
+
