--- a/quarterapp/resources/templates/404.html
+++ b/quarterapp/resources/templates/404.html
@@ -11,11 +11,11 @@
 {% block main %}
     <div class="container error">
         <div class="content">
-            <div class="icon-box icon-box-huge icon-box-left">
+            <div class="icon-box icon-box-big icon-box-left">
                 <div class="huge icon crash">&nbsp;</div>
             </div>
             <h2>404 - File not found</h2>
-            <p>The page that you are looking for (<strong>{{ path }}</strong>) may have been moved or deleted.
+            <p style="display: inline;">The page that you are looking for (<strong>{{ path }}</strong>) may have been moved or deleted.
         </div>
     </div>
 {% end %}
