Replacing entypo with Fontello, needs to be tested on Win and Mac now

--- a/quarterapp/resources/static/styles/qa.icons.less
+++ b/quarterapp/resources/static/styles/qa.icons.less
@@ -12,33 +12,20 @@
 
 
 .icon {
+    /* Default settings from Fontello */
     font-family: "fontello";
     font-style: normal;
     font-weight: normal;
     speak: none;
-
-    display: inline-block;
     text-decoration: inherit;
-    width: 1em;
     margin-right: .2em;
     text-align: center;
-    /* opacity: .8; */
-
-    /* For safety - reset parent styles, that can break glyph codes*/
     font-variant: normal;
     text-transform: none;
-    /* fix buttons height, for twitter bootstrap */
     line-height: 1em;
-
-    /* Animation center compensation - margins should be symmetric */
-    /* remove if not needed */
     margin-left: .2em;
+    font-size: 20px; 
 
-    /* you can be more comfortable with increased icons size */
-    font-size: 120%; 
-
-    /* Uncomment for 3D effect */
-    /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
 
 .icon.big {
@@ -66,27 +53,27 @@
 }
 
 .icon.edit:after {
-    content: "\e85a";
+    content: "\E85a";
 }
 
 .icon.next:after {
-    content: "\e87e";
+    content: "\E87e";
 }
 
 .icon.previous:before {
-    content: "\e87d";
+    content: "\E87d";
 }
 
 .icon.sod:before {
-    content: "\E767";
+    content: "\E87f";
 }
 
 .icon.eod:before {
-    content: "\E764";
+    content: "\E87c";
 }
 
 .icon.category:before {
-    content: "\e830";
+    content: "\E830";
 }
 
 .icon.disabled:before {
