--- a/quarterapp/resources/static/styles/qa.timesheet.less
+++ b/quarterapp/resources/static/styles/qa.timesheet.less
@@ -113,6 +113,7 @@
         .icon.current-activity {
             float: right;
             color: @positive_color;
+            margin-top: 10px;
         }
     }
 
