--- a/quarterapp/resources/templates/view_base.html
+++ b/quarterapp/resources/templates/view_base.html
@@ -22,6 +22,7 @@
             </script>
             <script src="/static/libraries/less-1.3.3.min.js" type="text/javascript"></script>
         {% end %}
+        <link rel="stylesheet" media="print" href="/static/styles/quarterapp.print.css" />
     </head>
     <body>
         <header id="header-region" class="main">
