--- a/quarterapp/resources/templates/view_base.html
+++ b/quarterapp/resources/templates/view_base.html
@@ -88,6 +88,7 @@
         {% if options.compressed_resources %}
             <script src="/static/scripts/quarterapp.min.js"></script>
         {% else %}
+            <script src="/static/libraries/Chart.min.js"></script>
             <script src="/static/libraries/moment.min.js"></script>
             <script src="/static/libraries/pikaday.min.js"></script>
             <script src="/static/scripts/qa.js"></script>
