Added structure for statistics page

--- a/quarterapp/resources/templates/wide_view_base.html
+++ b/quarterapp/resources/templates/wide_view_base.html
@@ -95,6 +95,7 @@
             <script src="/static/scripts/qa.category.js"></script>
             <script src="/static/scripts/qa.activity.js"></script>
             <script src="/static/scripts/qa.timesheet.js"></script>
+            <script src="/static/scripts/qa.statistics.js"></script>
             <script src="/static/scripts/qa.report.js"></script>
         {% end %}
     </body>
